notNullable fields. fixed white wrap on sidebar.

--- a/front-end/src/layout/Layout.css
+++ b/front-end/src/layout/Layout.css
@@ -1,4 +1,4 @@
 .side-bar {
-  background-color: #ffffff;
+  background-color: rgba(52, 58, 64);
   min-width: 200px;
 }
