--- a/front-end/src/layout/Menu.css
+++ b/front-end/src/layout/Menu.css
@@ -7,12 +7,23 @@
   --bg-secondary: #141418;
   --transition-speed: 600ms;
 }
+body::-webkit-scrollbar {
+  width: 0.25rem;
+}
 
+body::-webkit-scrollbar-track {
+  background: #1e1e24;
+}
+
+body::-webkit-scrollbar-thumb {
+  background: #6649b8;
+}
 .navibar {
   position: fixed;
   background-color: var(--bg-primary);
   transition: width 600ms ease;
-  overflow: scroll;
+  overflow: hidden;
+  white-space: nowrap;
 }
 
 .navibar-navi {
